--- a/index.ipynb
+++ b/index.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# One-sample z-test - Lab\n",
+    "# One-Sample z-test - Lab\n",
     "\n",
-    "### Introduction\n",
+    "## Introduction\n",
     "In this lab we will go through quick tests to help you better understand the ideas around hypothesis testing.\n",
     "\n",
     "## Objectives\n",
-    "You would be able to\n",
+    "You will be able to:\n",
     "* Understand and explain use cases for a 1-sample z-test\n",
     "* Set up null and alternative hypotheses\n",
     "* Calculate z statistic using z-tables and cdf functions\n",
@@ -174,13 +174,6 @@
     "\n",
     "In this lesson, we conducted a couple of simple tests comparing sample and population means, in an attempt to reject our null hypotheses. This provides you with a strong foundation to move ahead with more advanced tests and approaches in statistics. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
