--- a/index.ipynb
+++ b/index.ipynb
@@ -7,26 +7,21 @@
     "# One-Sample z-test - Lab\n",
     "\n",
     "## Introduction\n",
-    "In this lab we will go through quick tests to help you better understand the ideas around hypothesis testing.\n",
+    "In this lab you will perform a few quick tests to help you better understand the ideas around hypothesis testing.\n",
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
-    "* Understand and explain use cases for a 1-sample z-test\n",
+    "* Understand and explain use cases for a one-sample z-test\n",
     "* Set up null and alternative hypotheses\n",
-    "* Calculate z statistic using z-tables and cdf functions\n",
-    "* Calculate and interpret p-value for significance of results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Calculate z-statistic using z-tables and CDF functions\n",
+    "* Calculate and interpret p-value for significance of results\n",
+    "\n",
     "## Exercise 1\n",
-    "A rental car company claims the mean time to rent a car on their website is 60 seconds or less, with a standard deviation of 30 seconds. A random sample of 36 customers attempted to rent a car on the website. The mean time to rent was 75 seconds. Is this enough evidence to contradict the company's claim? \n",
+    "A rental car company claims that the mean time to rent a car on their website is 60 seconds or less, with a standard deviation of 30 seconds. You observed a sample of 36 customers attempting to rent a car on the website. The mean time to rent was 75 seconds. Is this enough evidence to contradict the company's claim? \n",
     "\n",
-    "<img src=\"http://www.guptatravelsjabalpur.com/wp-content/uploads/2016/04/car-rentalservice.jpg\" width=400>\n",
+    "<img src=\"http://www.guptatravelsjabalpur.com/wp-content/uploads/2016/04/car-rentalservice.jpg\" width=\"400\">\n",
     "\n",
-    "Follow the 5 steps shown in previous lesson and use alpha = 0.05. "
+    "Follow the 5 steps shown in previous lesson and use $\\alpha$ = 0.05. "
    ]
   },
   {
@@ -35,11 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n",
+    "# State your null and alternative hypotheses\n",
     "\n",
     "\n",
-    "# Ha : time to rent the car is greater than 60 seconds\n",
-    "# Ho : time to rent a car is less than or equal to 60 sec"
+    "# Ha : the time to rent the car is bigger than 60 seconds\n",
+    "# Ho : the time to rent a car is less than or equal to 60 sec"
    ]
   },
   {
@@ -79,10 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n",
+    "# Interpret the results in terms of the p-value\n",
     "\n",
-    "# with p value less than 0.05 , we can reject the null hypothesis and say that time to rent a car\n",
-    "# is significantly more than what company claims. "
+    "# with p-value less than 0.05, you can reject the null hypothesis and say that the time to rent a car\n",
+    "# is significantly higher than what company claims. "
    ]
   },
   {
@@ -91,21 +86,20 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "Twenty five students complete a preparation program for taking the SAT test.  Here are the SAT scores from the 25 students who completed  program:\n",
+    "25 students complete a preparation program for taking the SAT test.  Here are the SAT scores from the 25 students who completed  program:\n",
     "\n",
     "``\n",
-    "434 694 457 534 720 400 484 478 610 641 425 636 454\n",
+    "434 694 457 534 720 400 484 478 610 641 425 636 454 \n",
     "514 563 370 499 640 501 625 612 471 598 509 531\n",
     "``\n",
     "\n",
-    "<img src=\"http://falearningsolutions.com/wp-content/uploads/2015/09/FAcogtrain71FBimage.jpg\" width=400>\n",
+    "<img src=\"http://falearningsolutions.com/wp-content/uploads/2015/09/FAcogtrain71FBimage.jpg\" width=\"400\">\n",
     "\n",
     "We know that the population average for SAT scores is 500 with a standard deviation of 100.\n",
     "\n",
-    "The question is, are these students’ SAT scores significantly greater than a population mean? \n",
+    "Are our 25 students’ SAT scores significantly bigger than a population mean? \n",
     "\n",
-    "*Note that the the maker of the SAT prep program claims that it will increase (and not decrease) your SAT score.  So, you would be justified in conducting a one-directional test. (alpha = .05).*\n",
-    "\n"
+    "*Note that the SAT preparation program claims that it will increase (and not decrease) the SAT score.  So, you can conduct a one-directional test. (alpha = .05).*"
    ]
   },
   {
@@ -160,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n",
+    "# Interpret the results in terms of the p-value\n",
     "\n",
     "# The p value is less than tha alpha so we can colculde that:\n",
     "# the training has a SIGNIFICANT effect on the SAT outcome. "
@@ -172,7 +166,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this lesson, we conducted a couple of simple tests comparing sample and population means, in an attempt to reject our null hypotheses. This provides you with a strong foundation to move ahead with more advanced tests and approaches in statistics. "
+    "In this lesson, you conducted a couple of simple tests comparing sample and population means, in an attempt to reject our null hypotheses. This provides you with a strong foundation to move ahead with more advanced tests and approaches later on."
    ]
   }
  ],
