master cells merge

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,13 +14,8 @@
     "* Understand and explain use cases for a 1-sample z-test\n",
     "* Set up null and alternative hypotheses\n",
     "* Calculate z statistic using z-tables and cdf functions\n",
-    "* Calculate and interpret p-value for significance of results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Calculate and interpret p-value for significance of results.\n",
+    "\n",
     "## Exercise 1\n",
     "A rental car company claims the mean time to rent a car on their website is 60 seconds with a standard deviation of 30 seconds. A random sample of 36 customers attempted to rent a car on the website. The mean time to rent was 75 seconds. Is this enough evidence to contradict the company's claim? \n",
     "\n",
@@ -56,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n",
+    "# Interpret the results in terms of the p-value\n",
     "\n"
    ]
   },
@@ -111,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of the p-value\n"
    ]
   },
   {
@@ -122,13 +117,6 @@
     "\n",
     "In this lesson, we conducted a couple of simple tests comparing sample and population means, in an attempt to reject our null hypotheses. This provides you with a strong foundation to move ahead with more advanced tests and approaches in statistics. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
