fix example car to fast food

--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,7 @@
     "* Calculate and interpret p-value for significance of results\n",
     "\n",
     "## Exercise 1\n",
-    "A rental car company claims that the mean time to rent a car on their website is 60 seconds or less, with a standard deviation of 30 seconds. You observed a sample of 36 customers attempting to rent a car on the website. The mean time to rent was 75 seconds. Is this enough evidence to contradict the company's claim? \n",
+    "A fast food chain claims that the mean time to order food at their restaurants is 60 seconds, with a standard deviation of 30 seconds. You decide to take this claim to the test and go to one of the restaurants to observe actual waiting times. You take a sample of 36 customers and find that the mean order time was 75 seconds. Does this finding prove enough evidence to contradict the fast food chain's claim of fast service?\n",
     "\n",
     "Follow the 5 steps shown in previous lesson and use $\\alpha$ = 0.05. "
    ]
@@ -31,8 +31,8 @@
     "# State your null and alternative hypotheses\n",
     "\n",
     "\n",
-    "# Ha : the time to rent the car is bigger than 60 seconds\n",
-    "# Ho : the time to rent a car is less than or equal to 60 sec"
+    "# Ha : the time to order food is bigger than 60 seconds\n",
+    "# Ho : the time to order food is less than or equal to 60 sec"
    ]
   },
   {
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Interpret the results in terms of the p-value\n",
     "\n",
-    "# with p-value less than 0.05, you can reject the null hypothesis and say that the time to rent a car\n",
-    "# is significantly higher than what company claims. "
+    "# with p-value less than 0.05, you can reject the null hypothesis and say that the time to order food\n",
+    "# is significantly higher than what the fast food chain claims. "
    ]
   },
   {
