--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,7 @@
     "* Calculate and interpret p-value for significance of results\n",
     "\n",
     "## Exercise 1\n",
-    "A fast food chain claims that the mean time to order food at their restaurants is 60 seconds, with a standard deviation of 30 seconds. You decide to take this claim to the test and go to one of the restaurants to observe actual waiting times. You take a sample of 36 customers and find that the mean order time was 75 seconds. Does this finding prove enough evidence to contradict the fast food chain's claim of fast service?\n",
+    "A fast food chain claims that the mean time to order food at their restaurants is 60 seconds, with a standard deviation of 30 seconds. You decide to put this claim to the test and go to one of the restaurants to observe actual waiting times. You take a sample of 36 customers and find that the mean order time was 75 seconds. Does this finding prove enough evidence to contradict the fast food chain's claim of fast service?\n",
     "\n",
     "Follow the 5 steps shown in previous lesson and use $\\alpha$ = 0.05. "
    ]
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# State your null and alternative hypotheses\n"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "\n",
     "We know that the population average for SAT scores is 500 with a standard deviation of 100.\n",
     "\n",
-    "Are our 25 students’ SAT scores significantly bigger than a population mean? \n",
+    "Are our 25 students’ SAT scores significantly higher than the population's mean score? \n",
     "\n",
     "*Note that the SAT preparation program claims that it will increase (and not decrease) the SAT score.  So, you can conduct a one-directional test. (alpha = .05).*"
    ]
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
