--- a/index.ipynb
+++ b/index.ipynb
@@ -11,13 +11,13 @@
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
-    "* Understand and explain use cases for a one-sample z-test\n",
+    "* Understand and explain use cases for a one-sample $z$-test\n",
     "* Set up null and alternative hypotheses\n",
-    "* Calculate z-statistic using z-tables and CDF functions\n",
+    "* Calculate $z$-statistic using $z$-tables and CDF functions\n",
     "* Calculate and interpret p-value for significance of results\n",
     "\n",
     "## Exercise 1\n",
-    "A fast food chain claims that the mean time to order food at their restaurants is 60 seconds, with a standard deviation of 30 seconds. You decide to put this claim to the test and go to one of the restaurants to observe actual waiting times. You take a sample of 36 customers and find that the mean order time was 75 seconds. Does this finding prove enough evidence to contradict the fast food chain's claim of fast service?\n",
+    "A fast-food chain claims that the mean time to order food at their restaurants is 60 seconds, with a standard deviation of 30 seconds. You decide to put this claim to the test and go to one of the restaurants to observe actual waiting times. You take a sample of 36 customers and find that the mean order time was 75 seconds. Does this finding provide enough evidence to contradict the fast food chain's claim of fast service?\n",
     "\n",
     "Follow the 5 steps shown in previous lesson and use $\\alpha$ = 0.05. "
    ]
@@ -118,7 +118,7 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "25 students complete a preparation program for taking the SAT test.  Here are the SAT scores from the 25 students who completed  program:\n",
+    "25 students complete a preparation program for taking the SAT test.  Here are the SAT scores from the 25 students who completed the program:\n",
     "\n",
     "``\n",
     "434 694 457 534 720 400 484 478 610 641 425 636 454 \n",
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
