--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
     "# One-Sample z-test - Lab\n",
     "\n",
     "## Introduction\n",
-    "In this lab you'll perform a few quick tests to help you better understand how hypothesis testing works.\n",
+    "In this lab, you'll perform a few quick tests to help you better understand how hypothesis testing works.\n",
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
