fixed learning objectives

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,9 +11,10 @@
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
-    "* Understand and explain use cases for a one-sample $z$-test\n",
+    "\n",
+    "* Explain use cases for a 1-sample z-test\n",
     "* Set up null and alternative hypotheses\n",
-    "* Calculate $z$-statistic using $z$-tables and CDF functions\n",
+    "* Use the z-table and scipy methods to acquire the p value for a given z-score\n",
     "* Calculate and interpret p-value for significance of results\n",
     "\n",
     "## Exercise 1\n",
@@ -152,7 +153,7 @@
     "\n",
     "\n",
     "# Ha : there is an increase in grades after program\n",
-    "# Ho : there is no incerase in grade "
+    "# Ho : there is no increase in grade "
    ]
   },
   {
@@ -220,8 +221,8 @@
     "# __SOLUTION__ \n",
     "# Interpret the results in terms of the p-value\n",
     "\n",
-    "# The p value is less than tha alpha so we can colculde that:\n",
-    "# the training has a SIGNIFICANT effect on the SAT outcome. "
+    "# The p value is less than tha alpha so we can conclude that:\n",
+    "# the training has a SIGNIFICANT effect on the SAT outcome at a significance level of 0.05"
    ]
   },
   {
@@ -251,6 +252,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
